--- a/css/affily.css
+++ b/css/affily.css
@@ -1,62 +1,64 @@
-.highlighter {
+.af-hl {
   font-weight: bold;
   margin: 0 0.1em;
   padding: 0.1em 0.2em;
-  backgroud: #fcfc60 !important;
+}
+
+.af-hl__marker {
   background: linear-gradient(to bottom, transparent 60%, #ff99ff 60%) !important;
 }
 
-.highlighter.green {
+.af-hl__marker.-color-green {
   background: linear-gradient(to bottom, transparent 60%, #99ff99 60%) !important;
 }
 
-.highlighter.yellow {
+.af-hl__marker.-color-yellow {
   background: linear-gradient(to bottom, transparent 60%, #ffff99 60%) !important;
 }
 
-.balloon-message {
+.af-hl__dotted-underline {
+  border-bottom: 3px dotted #f14668;
+}
+
+.af-balloon {
   margin-bottom: 2rem;
   flex-direction: row;
   display: flex;
 }
 
-.balloon-message.left .text:before {
+.af-balloon.-side-left .af-balloon__text:before {
   left: -20px;
   border-right: 10px solid rgba(0, 0, 0, 0.2);
 }
 
-.balloon-message.left .text:after {
+.af-balloon.-side-left .af-balloon__text:after {
   left: -18px;
   border-right: 10px solid #fff;
 }
 
-.balloon-message.right .text:before {
+.af-balloon.-side-right .af-balloon__text:before {
   right: -20px;
   border-left: 10px solid rgba(0, 0, 0, 0.2);
 }
 
-.balloon-message.right .text:after {
+.af-balloon.-side-right .af-balloon__text:after {
   right: -18px;
   border-left: 10px solid #fff;
 }
 
-.balloon-message.right .avatar {
+.af-balloon.-side-right .af-balloon__avatar {
   margin-left: 20px;
   order: 2;
 }
 
-.balloon-message .avatar {
+.af-balloon .af-balloon__avatar {
   position: relative;
   width: 64px;
   height: 64px;
   flex-shrink: 0;
 }
 
-.balloon-message .avatar.right {
-  float: right;
-}
-
-.balloon-message .text {
+.af-balloon .af-balloon__text {
   position: relative;
   border-radius: 5px;
   padding: 20px 30px;
@@ -65,7 +67,7 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.balloon-message .text:before {
+.af-balloon .af-balloon__text:before {
   content: "";
   position: absolute;
   top: 50%;
@@ -73,7 +75,7 @@
   border: 10px solid transparent;
 }
 
-.balloon-message .text:after {
+.af-balloon .af-balloon__text:after {
   border: 10px solid transparent;
   content: "";
   position: absolute;
@@ -81,14 +83,14 @@
   margin-top: -10px;
 }
 
-.rank-panel {
+.af-rank {
   position: relative;
   padding: 30px;
   overflow: hidden;
   border: 1px solid #e7e7e7;
 }
 
-.rank-panel .badge {
+.af-rank .af-rank__badge {
   font-size: 20px;
   font-weight: bold;
   height: 35px;
@@ -103,31 +105,43 @@
   color: #333;
 }
 
-.rank-panel .container {
+.af-rank .af-rank__container {
   display: flex;
   margin-bottom: 10px;
   padding: 0;
 }
 
-.tldr {
-  border: 4px solid #e60000;
+.af-tldr {
+  border: 4px solid #f14668;
+  padding: 4px;
+}
+
+.af-tldr.-shape-rounded {
   border-radius: 15px;
 }
 
-.tldr .title {
-  border-bottom: 1px solid #e60000;
+.af-tldr.-color-green {
+  border-color: #48c774;
+}
+
+.af-tldr.-color-green .af-tldr__title {
+  border-bottom-color: #48c774;
+}
+
+.af-tldr .af-tldr__title {
+  border-bottom: 1px solid #f14668;
   border-top: none;
   padding: 3px;
   font-size: 2rem;
 }
 
-.tldr .content li {
+.af-tldr .af-tldr__content li {
   list-style: none;
   font-size: 1.5rem;
   font-weight: bold;
 }
 
-.tldr .content li:before {
+.af-tldr .af-tldr__content li:before {
   content: '';
   display: inline-block;
   transform: rotate(45deg);
@@ -137,3 +151,50 @@
   border-bottom: 7px solid #78b13f;
   border-right: 7px solid #78b13f;
 }
+
+.af-heading__ribbon {
+  position: relative;
+  padding: 0.5em;
+  margin-bottom: 20px;
+}
+
+.af-heading__ribbon::before {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 0;
+  border: none;
+  border-bottom: solid 15px transparent;
+  border-right: solid 20px #959e9b;
+}
+
+.af-heading__ribbon.-color-green {
+  color: white;
+  background-color: #48c774;
+}
+
+.af-heading__underline {
+  color: #0a0a0a;
+  border-bottom-with: 3px;
+  border-bottom-style: solid;
+  border-bottom-color: #3273dc;
+}
+
+.af-heading__underline.-color-green {
+  border-bottom-color: #48c774;
+}
+
+.af-heading__leftline {
+  padding: 0.25rem 0.5rem;
+  color: #0a0a0a;
+  background: transparent;
+  border-left-style: solid;
+  border-left-width: 5px;
+  border-left-color: #3273dc;
+}
+
+.af-heading__leftline.-color-green {
+  border-left-color: #48c774;
+}
+
+/*# sourceMappingURL=affily.css.map */
