--- a/docs/_includes/elements/snippet.html
+++ b/docs/_includes/elements/snippet.html
@@ -1,7 +1,7 @@
 {% if include.plain %}
 <div class="columns">
   <div class="column is-half">
-    <div class="bd-example">
+    <div class="ad-example">
       {{ include.content }}
     </div>
   </div>
@@ -11,14 +11,14 @@
 </div>
 {% else %}
 <div class="
-            bd-snippet
-            {% if include.horizontal %}bd-is-horizontal{% else %}bd-is-vertical{% endif %}
-            {% if include.clipped %}bd-is-clipped{% endif %}
-            {% if include.size %}bd-is-{{ include.size }}{% endif %}
-            {% if include.one_fifth %}bd-is-one-fifth{% endif %}
-            {% if include.fullwidth %}bd-is-fullwidth{% endif %}
+            ad-snippet
+            {% if include.horizontal %}ad-is-horizontal{% else %}ad-is-vertical{% endif %}
+            {% if include.clipped %}ad-is-clipped{% endif %}
+            {% if include.size %}ad-is-{{ include.size }}{% endif %}
+            {% if include.one_fifth %}ad-is-one-fifth{% endif %}
+            {% if include.fullwidth %}ad-is-fullwidth{% endif %}
             ">
-  <div class="bd-snippet-preview {% if include.paddingless %}is-paddingless{% endif %}">
+  <div class="ad-snippet-preview {% if include.paddingless %}is-paddingless{% endif %}">
     {% if include.wrapper %}
     <div class="{{ include.wrapper }}">
       {{ include.content }}
@@ -27,7 +27,7 @@
     {{ include.content }}
     {% endif %}
   </div>
-  <div class="bd-snippet-code {% unless include.clipped %}highlight-full{% endunless %} {% if include.more %}bd-is-more bd-is-more-clipped{% endif %}">
+  <div class="ad-snippet-code {% unless include.clipped %}highlight-full{% endunless %} {% if include.more %}ad-is-more ad-is-more-clipped{% endif %}">
     {% highlight html %}{{ include.content }}{% endhighlight %}
   </div>
 </div>
