--- a/docs/affily-docs.scss
+++ b/docs/affily-docs.scss
@@ -1,3 +1,17 @@
 @charset "utf-8";
 
 @import "../affily";
+
+@import "./_scss/highlight";
+@import "./_scss/example";
+
+.af-tldr {
+    margin-bottom: 40px;
+}
+p {
+    margin-bottom: 30px;
+}
+h4 {
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
