--- a/scss/ranking.scss
+++ b/scss/ranking.scss
@@ -1,10 +1,10 @@
-.rank-panel {
+.af-rank {
     position: relative;
     padding: 30px;
     overflow: hidden;
     border: 1px solid #e7e7e7;
 
-    .badge {
+    .af-rank__badge {
         font-size: 20px;
         font-weight: bold;
         height: 35px;
@@ -19,7 +19,7 @@
         color: #333;
     }
 
-    .container {
+    .af-rank__container {
         display: flex;
         margin-bottom: 10px;
         padding: 0;
