--- a/scss/tldr.scss
+++ b/scss/tldr.scss
@@ -1,15 +1,26 @@
-.tldr {
-    border: 4px solid #e60000;
-    border-radius: 15px;
+.af-tldr {
+    border: 4px solid $red;
+    padding: 4px;
 
-    .title {
-        border-bottom: 1px solid #e60000;
+    &.-shape-rounded {
+        border-radius: 15px;
+    }
+    &.-color-green {
+        border-color: $green;
+        .af-tldr__title {
+            border-bottom-color: $green;
+        }
+    }
+
+    .af-tldr__title {
+        border-bottom: 1px solid $red;
         border-top: none;
         padding: 3px;
         font-size: 2rem;
+
     }
 
-    .content {
+    .af-tldr__content {
         li {
             list-style: none;
             font-size: 1.5rem;
